--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ 19d8e8ac-9cf5-4b5b-bab2-cbece6384264 }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
